src/objects/Trade_Ally_Other_Document__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Trade Ally Other Documents</relationshipLabel>
        <relationshipName>Trade_Ally_Other_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Document__c</fullName>
        <label>Other Document</label>
        <referenceTo>Other_Document__c</referenceTo>
        <relationshipLabel>Trade Ally Other Documents</relationshipLabel>
        <relationshipName>Trade_Ally_Other_Documents</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trade_Ally__c</fullName>
        <label>Trade Ally</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trade Ally Other Documents</relationshipLabel>
        <relationshipName>Trade_Ally_Other_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Trade Ally Other Document</label>
    <nameField>
        <label>Trade Ally Other Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Ally Other Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>